--- a/src/components/ArticleContainer.astro
+++ b/src/components/ArticleContainer.astro
@@ -1,5 +1,7 @@
 ---
+
 ---
-<div class="narrow leading-relaxed mx-auto flex flex-col gap-10 mb-10">
+
+<div class="narrow mx-auto flex flex-col mb-10">
   <slot />
 </div>
