--- a/src/components/sections/Quote.astro
+++ b/src/components/sections/Quote.astro
@@ -2,12 +2,20 @@
 import Button from "../Button.astro";
 import ImagesCarousel from "../ImagesCarousel.astro";
 ---
+
 <section class="relative overflow-hidden">
   <div class="quote-decorator"></div>
   <div class="container mx-auto overflow-visible">
     <blockquote class="quote">
-      <p class="heading h1 text-luckypoint text-center">Gdzie dwóch albo trzech gromadzi się <br class="hidden lg:inline">w Moje imię, tam jestem pośród nich</p>
-      <footer><cite class="text-lg lg:text-2xl font-normal leading-none not-italic">Mt 18,20</cite></footer>
+      <p class="heading h1 text-luckypoint text-center">
+        Gdzie dwóch albo trzech gromadzi się <br class="hidden lg:inline" />
+         w Moje imię, tam jestem pośród nich
+      </p>
+      <footer>
+        <cite class="text-lg lg:text-2xl font-normal leading-none not-italic">
+          Mt 18,20
+        </cite>
+      </footer>
     </blockquote>
     <ImagesCarousel />
     <div class="relative flex justify-end items-center mt-10 z-100">
