--- a/src/pages/intencje-mszalne.astro
+++ b/src/pages/intencje-mszalne.astro
@@ -1,9 +1,9 @@
 ---
-import { PortableText } from "astro-portabletext";
-import { siteSettings } from "../utils/store";
+import {siteSettings} from "../utils/store";
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero/Page.astro";
-import InfoContainer from "../components/InfoContainer.astro";
+import PortableTextInternal from "@components/PortableTextInternal.astro";
+import ArticleContainer from "@components/ArticleContainer.astro";
 
 const page = {
   title: "Intencje Mszalne",
@@ -14,14 +14,14 @@ const page = {
 
 <Layout title={page.title} description={page.description}>
   <Hero />
-  <section class="page py-10">
+  <article class="page py-10">
     <div class="container mx-auto">
       <div class="hero-heading">
         <h1 class="heading h0 text-center mt-10 mb-20">{page.title}</h1>
       </div>
-      <InfoContainer>
-        <PortableText value={siteSettings?.massIntentions} />
-      </InfoContainer>
+      <ArticleContainer>
+        <PortableTextInternal value={siteSettings?.massIntentions} />
+      </ArticleContainer>
     </div>
-  </section>
+  </article>
 </Layout>
