--- a/src/pages/ogloszenia-parafialne.astro
+++ b/src/pages/ogloszenia-parafialne.astro
@@ -1,9 +1,9 @@
 ---
-import { PortableText } from "astro-portabletext";
-import { siteSettings } from "../utils/store";
+import {siteSettings} from "../utils/store";
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero/Page.astro";
-import InfoContainer from "../components/InfoContainer.astro";
+import ArticleContainer from "../components/ArticleContainer.astro";
+import PortableTextInternal from "@components/PortableTextInternal.astro";
 
 const page = {
   title: "Ogłoszenia Parafialne",
@@ -12,19 +12,16 @@ const page = {
 };
 ---
 
-<Layout
-  title={page.title}
-  description={page.description}
->
+<Layout title={page.title} description={page.description}>
   <Hero />
-  <section class="page py-10">
+  <article class="page py-10">
     <div class="container mx-auto">
       <div class="hero-heading">
         <h1 class="heading h0 text-center mt-10 mb-20">{page.title}</h1>
       </div>
-      <InfoContainer>
-        <PortableText value={siteSettings?.parishAnnouncements} />
-      </InfoContainer>
+      <ArticleContainer>
+        <PortableTextInternal value={siteSettings?.parishAnnouncements} />
+      </ArticleContainer>
     </div>
-  </section>
+  </article>
 </Layout>
