--- a/src/components/Hero/Home.astro
+++ b/src/components/Hero/Home.astro
@@ -82,7 +82,7 @@ import heroBgMobileImage from "src/assets/hero-bg-mobile.jpg";
     @apply w-full h-[100vh];
   }
   .fullscreen--home {
-    @apply min-h-[600px] sm:min-h-[800px] xl:min-h-[125dvh] 2xl:min-h-[110dvh] 3xl:min-h-[100dvh] 3xl:h-[110dvh] bg-nero text-white;
+    @apply min-h-[600px] sm:min-h-[800px] xl:min-h-[125vh] 2xl:min-h-[110vh] 3xl:min-h-[100vh] 3xl:h-[110vh] bg-nero text-white;
   }
   .hero-heading {
     @apply mt-8 sm:mt-16 lg:mt-20 text-center xl:text-left;
